--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 # VS CODE #
 ###########
 
-.vscode/*
-!.vscode/settings.json
+# .vscode/*
+# !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
